--- a/src/services/catalog/Catalog.API/appsettings.json
+++ b/src/services/catalog/Catalog.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoSettings": {
+    "Connection": "mongodb://root:rootpassword@localhost:27017",
+    "DatabaseName": "Catalog"
+  }
 }
