--- a/src/services/catalog/Catalog.Application/Catalog.Application.csproj
+++ b/src/services/catalog/Catalog.Application/Catalog.Application.csproj
@@ -3,11 +3,23 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Catalog.Core\Catalog.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Brands\Handlers\" />
+    <Folder Include="Features\Brands\Requests\" />
+    <Folder Include="Features\Types\Handlers\" />
+    <Folder Include="Features\Types\Requests\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
 </Project>
