--- a/src/services/catalog/Catalog.API/Dockerfile1.original
+++ b/src/services/catalog/Catalog.API/Dockerfile1.original
@@ -5,6 +5,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
+EXPOSE 8081
 
 
 # This stage is used to build the service project
@@ -29,4 +30,5 @@ RUN dotnet publish "./Catalog.API.csproj" -c $BUILD_CONFIGURATION -o /app/publis
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY src/services/catalog/Catalog.API/wwwroot ./wwwroot
 ENTRYPOINT ["dotnet", "Catalog.API.dll"]
