--- a/src/services/catalog/Catalog.API/appsettings.json
+++ b/src/services/catalog/Catalog.API/appsettings.json
@@ -7,7 +7,14 @@
   },
   "AllowedHosts": "*",
   "MongoSettings": {
-    "Connection": "mongodb://root:rootpassword@localhost:27017",
-    "DatabaseName": "Catalog"
+    "Connection": "mongodb://catalogdb:27017",
+    "DatabaseName": "CatalogDb"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080"
+      }
+    }
   }
 }
