--- a/src/services/catalog/Catalog.API/Catalog.API.csproj
+++ b/src/services/catalog/Catalog.API/Catalog.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>67c69595-e575-4992-8f93-64bee8d746ca</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +16,12 @@
     <Content Remove="wwwroot\Seeds\types.json" />
   </ItemGroup>
 
-  <ItemGroup>
+    <ItemGroup>
+    	<Content Include="wwwroot\**" CopyToOutputDirectory="Always" />
+    </ItemGroup>
+
+
+	<ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
