--- a/src/services/catalog/Catalog.API/Dockerfile.original
+++ b/src/services/catalog/Catalog.API/Dockerfile.original
@@ -5,8 +5,6 @@ FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
-EXPOSE 443
 
 
 # This stage is used to build the service project
@@ -14,9 +12,9 @@ FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["src/services/catalog/Catalog.API/Catalog.API.csproj", "src/services/catalog/Catalog.API/"]
-COPY ["src/services/catalog/Catalog.API/Catalog.Application.csproj", "src/services/catalog/Catalog.Application/"]
-COPY ["src/services/catalog/Catalog.API/Catalog.Core.csproj", "src/services/catalog/Catalog.Core/"]
-COPY ["src/services/catalog/Catalog.API/Catalog.Infrastructure.csproj", "src/services/catalog/Catalog.Infrastructure/"]
+COPY ["src/services/catalog/Catalog.Application/Catalog.Application.csproj", "src/services/catalog/Catalog.Application/"]
+COPY ["src/services/catalog/Catalog.Core/Catalog.Core.csproj", "src/services/catalog/Catalog.Core/"]
+COPY ["src/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj", "src/services/catalog/Catalog.Infrastructure/"]
 RUN dotnet restore "./src/services/catalog/Catalog.API/Catalog.API.csproj"
 COPY . .
 WORKDIR "/src/src/services/catalog/Catalog.API"
@@ -31,4 +29,5 @@ RUN dotnet publish "./Catalog.API.csproj" -c $BUILD_CONFIGURATION -o /app/publis
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY src/services/catalog/Catalog.API/wwwroot ./wwwroot
 ENTRYPOINT ["dotnet", "Catalog.API.dll"]
