--- a/src/services/catalog/Catalog.API/Catalog.API.csproj
+++ b/src/services/catalog/Catalog.API/Catalog.API.csproj
@@ -1,37 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>67c69595-e575-4992-8f93-64bee8d746ca</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
     <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\Seeds\brands.json" />
-    <Content Remove="wwwroot\Seeds\products.json" />
-    <Content Remove="wwwroot\Seeds\types.json" />
-  </ItemGroup>
-
-    <ItemGroup>
-    	<Content Include="wwwroot\**" CopyToOutputDirectory="Always" />
-    </ItemGroup>
-
-
-	<ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="wwwroot\Seeds\brands.json" />
-    <None Include="wwwroot\Seeds\products.json" />
-    <None Include="wwwroot\Seeds\types.json" />
   </ItemGroup>
 
   <ItemGroup>
