--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     depends_on:
      - catalogdb
     environment:
+     - ASPNETCORE_URLS=http://+:8080
      - MongoSettings__Connection=mongodb://catalogdb:27017
      - MongoSettings__DatabaseName=CatalogDb
 
@@ -21,6 +22,26 @@ services:
     volumes:
       - catalogdbdata:/data/db
  
+  basketdb:
+    image: redis:alpine
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379"
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: src/services/basket/Basket.API/Dockerfile
+
+    ports:
+     - "8081:8080"
+    depends_on:
+     - basketdb
+    environment:
+     - ASPNETCORE_URLS=http://+:8080
+     - CacheSettings__Connection=basketdb:6379
+
 volumes:
   catalogdbdata:
   
