--- a/src/services/basket/Basket.API/appsettings.json
+++ b/src/services/basket/Basket.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CacheSettings": {
+    "Connection": "localhost:6379"
+  }
 }
