--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,17 @@ services:
      - ASPNETCORE_URLS=http://+:8080
      - CacheSettings__Connection=basketdb:6379
 
+  portainer:
+    image: portainer/portainer-ce
+    container_name: portainer
+    restart: always
+    ports:
+      - "8080:8080"
+      - "9000:9000"
+    volumes:
+      - portainer_data:/data
+
 volumes:
   catalogdbdata:
+  portainer_data:
   
