--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,3 +13,11 @@ services:
     ports:
       - "8080"
 
+
+  discount.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+    ports:
+      - "8080"
+
