--- a/src/services/discount/Discount.API/appsettings.json
+++ b/src/services/discount/Discount.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "PostgreSettings": {
-    "Connection": "server=discountdb;port=5432;Database=discountdb;User Id=admin;Password=admin"
+    "Connection": "Host=localhost;Port=5432;Database=discountdb;Username=admin;Password=admin",
+    //"Connection": "server=localhost;port=5432;Database=discountdb;User Id=admin;Password=admin"
     //"Connection": "Host=discountdb;Port=5432;Database=discountdb;Username=admin;Password=admin"
   },
   "Kestrel": {
