--- a/src/services/basket/Basket.API/appsettings.json
+++ b/src/services/basket/Basket.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "CacheSettings": {
     "Connection": "localhost:6379"
+  },
+  "GrpcSettings": {
+    "DiscountUrl": "http://localhost:8082"
   }
 }
