--- a/src/services/discount/Discount.API/Properties/launchSettings.json
+++ b/src/services/discount/Discount.API/Properties/launchSettings.json
@@ -6,7 +6,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:8082"
+      "applicationUrl": "http://localhost:8082",
+      "launchBrowser": true
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
