--- a/src/services/basket/Basket.API/appsettings.json
+++ b/src/services/basket/Basket.API/appsettings.json
@@ -11,5 +11,8 @@
   },
   "GrpcSettings": {
     "DiscountUrl": "http://localhost:8082"
+  },
+  "RabbitMQSetting": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   }
 }
