--- a/src/services/basket/Basket.Application/Basket.Application.csproj
+++ b/src/services/basket/Basket.Application/Basket.Application.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Infrastructure\EventBus.RabbitMQ\EventBus.RabbitMQ.csproj" />
     <ProjectReference Include="..\Basket.Core\Basket.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Features\CheckOuts\DTOs\" />
     <Folder Include="Features\CheckOuts\Handlers\" />
-    <Folder Include="Features\CheckOuts\Requests\" />
   </ItemGroup>
 
   <ItemGroup>
