--- a/src/services/ordering/Ordering.API/appsettings.json
+++ b/src/services/ordering/Ordering.API/appsettings.json
@@ -9,6 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,9005;Database=orderdb;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True;encrypt=false;"
     //"DefaultConnection": "Server=orderdb,9000;Database=orderdb;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True;"
+  },
+  "RabbitMQSetting": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   }
-
 }
