--- a/src/services/basket/Basket.API/appsettings.json
+++ b/src/services/basket/Basket.API/appsettings.json
@@ -14,5 +14,10 @@
   },
   "RabbitMQSetting": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+  "LoggingOptions": {
+    "ApplicationName": "Basket.API",
+    "LogLevel": "Information",
+    "ElasticUrl": "http://localhost:9200"
   }
 }
