--- a/src/services/basket/Basket.Application/Basket.Application.csproj
+++ b/src/services/basket/Basket.Application/Basket.Application.csproj
@@ -8,16 +8,19 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Infrastructure\EventBus.RabbitMQ\EventBus.RabbitMQ.csproj" />
+    <ProjectReference Include="..\..\..\Infrastructure\Shared.Logging\Shared.Logging.csproj" />
     <ProjectReference Include="..\Basket.Core\Basket.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Features\CheckOuts\DTOs\" />
-    <Folder Include="Features\CheckOuts\Handlers\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="MassTransit" Version="7.3.1" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.76.0" />
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
