--- a/src/services/catalog/Catalog.API/appsettings.json
+++ b/src/services/catalog/Catalog.API/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "MongoSettings": {
-    "Connection": "mongodb://catalogdb:27017",
+    "Connection": "mongodb://localhost:27017",
     "DatabaseName": "CatalogDb"
+  },
+  "LoggingOptions": {
+    "ApplicationName": "Catalog.API",
+    "LogLevel": "Information",
+    "ElasticUrl": "http://localhost:9200"
   }
 }
