--- a/src/services/catalog/Catalog.Application/Catalog.Application.csproj
+++ b/src/services/catalog/Catalog.Application/Catalog.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Infrastructure\Shared.Logging\Shared.Logging.csproj" />
     <ProjectReference Include="..\Catalog.Core\Catalog.Core.csproj" />
   </ItemGroup>
 
