--- a/src/services/ordering/Ordering.API/appsettings.json
+++ b/src/services/ordering/Ordering.API/appsettings.json
@@ -12,5 +12,11 @@
   },
   "RabbitMQSetting": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+
+  "LoggingOptions": {
+    "ApplicationName": "Ordering.API",
+    "LogLevel": "Information",
+    "ElasticUrl": "http://localhost:9200"
   }
 }
