--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,14 @@ services:
     container_name: catalogapi
     depends_on:
      - catalogdb
+     - elasticsearch
     environment:
      - ASPNETCORE_URLS=http://+:8080
      - MongoSettings__Connection=mongodb://catalogdb:27017
      - MongoSettings__DatabaseName=CatalogDb
+     - LoggingOptions__ApplicationName=Catalog.API
+     - LoggingOptions__LogLevel=Information
+     - LoggingOptions__ElasticUrl=http://elasticsearch:9200
 
   catalogdb:
     image: mongo
@@ -40,11 +44,15 @@ services:
     depends_on:
      - basketdb
      - rabbitmq
+     - elasticsearch
     environment:
      - ASPNETCORE_URLS=http://+:8080
      - CacheSettings__Connection=basketdb:6379
      - GrpcSettings__DiscountUrl=http://discount.api:8082
      - RabbitMQSetting__HostAddress=amqp://guest:guest@rabbitmq:5672
+     - LoggingOptions__ApplicationName=Basket.API
+     - LoggingOptions__LogLevel=Information
+     - LoggingOptions__ElasticUrl=http://elasticsearch:9200
 
   portainer:
     image: portainer/portainer-ce
@@ -98,12 +106,17 @@ services:
      - "8082:8080"
     container_name: discountapi
     depends_on:
+      elasticsearch:
+        condition: service_healthy
       discountdb:
         condition: service_healthy
+
     environment:
      - ASPNETCORE_URLS=http://+:8080
      - PostgreSettings__Connection=Host=discountdb;Port=5432;Database=discountdb;Username=admin;Password=admin
-
+     - LoggingOptions__ApplicationName=Discount.API
+     - LoggingOptions__LogLevel=Information
+     - LoggingOptions__ElasticUrl=http://elasticsearch:9200
     volumes:
       - discountdbdata:/data/db
 
@@ -137,10 +150,15 @@ services:
     depends_on:
       - orderdb
       - rabbitmq
+      - elasticsearch
     environment:
       - "ASPNETCORE_URLS: http://+:8080"
       - "ConnectionStrings__DefaultConnection=Server=orderdb,1433;Database=orderdb;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True;"
       - "RabbitMQSetting__HostAddress=amqp://guest:guest@rabbitmq:5672"
+      - LoggingOptions__ApplicationName=Ordering.API
+      - LoggingOptions__LogLevel=Information
+      - LoggingOptions__ElasticUrl=http://elasticsearch:9200
+
     restart: always
 
 
@@ -152,12 +170,38 @@ services:
       - "15672:15672"
     restart: always
 
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
+    container_name: elasticsearch
+    environment:
+      - node.name=es-node
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.11.1
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+
 volumes:
   catalogdbdata:
   portainer_data:
   discountdbdata:
   pgadmindata:
   orderdbdata:
+  esdata:
   
 
 
