--- a/src/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/src/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj" />
   </ItemGroup>
 
